# minrank-pke

./: README.md  pyproject.toml  scheme.py  test_scheme.py
minrank_pke/: __init__.py
tests/: test_scheme.py
