[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minrank-pke"
version = "0.1.0"
description = "Public-Key Encryption from the MinRank Problem"
readme = "README.md"
authors = [
    {name = "Based on work by Rohit Chatterjee, Changrui Mu, Prashant Nalini Vasudevan"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]

[project.urls]
Homepage = "https://github.com/fall3noath/minrank-pke"
Paper = "https://eprint.iacr.org/2025/1833"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["minrank_pke"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = True
